<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/edit"
        android:checkable="true"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="1"
        android:checked="true"
        android:title="@string/edit"/>
    <item
        android:id="@+id/save"
        android:orderInCategory="2"
        android:title="save"
        android:visible="false"/>
    <item
        android:id="@+id/preference"
        android:orderInCategory="3"
        android:title="@string/preference"/>
	<item
        android:id="@+id/about"
        android:orderInCategory="4"
        android:title="@string/about"/>
</menu>